# p2pchat

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.vue  auto-imports.d.ts  components.d.ts  main.ts  router.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  function.rs  handlers.rs  main.rs  models.rs  plugin.rs  store.rs
src-tauri/src/chat_app/: app_command.rs  frontend.rs  frontend_event.rs  inbound.rs  inbound_event.rs  mod.rs
src-tauri/src/event/: command.rs  frontend.rs  inbound.rs  mod.rs
src-tauri/src/eventloop/: command.rs  frontend.rs  inbound.rs  mod.rs
src-tauri/src/managers/: file.rs  group.rs  mod.rs  user.rs
src-tauri/src/network/: behaviour.rs  message.rs  mod.rs
src/components/: GroupList.vue  TitleBar.vue  WaitChat.vue
src/components/chat/: Chat.vue  ChatContent.vue  ChatMessage.vue
src/pages/: Main.vue  Settings.vue
src/states/: global.ts  group-state.ts  setting-state.ts  setting.ts  user-state.ts
src/styles/: main.scss  settings.scss  utils.scss
src/utils/: app-event.ts  backend.ts  chatApp.ts  types.ts
