[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all"] }
tokio = { version = "1.20.1", features = ["full"] }
window-vibrancy = { version = "0.3.2" }
window-shadows = { version = "0.2.1" }
anyhow = { version = "1.0.61" }
libp2p = { version = "0.50.0", features = ["tokio", "full"] }
env_logger = "0.10.0"
futures = "0.3.25"
async-trait = "0.1.61"
tokio-stream = "0.1.11"
log = "0.4.17"
thiserror = "1.0.38"
derive_more = "0.99.17"
chrono = { version = "0.4.23", features = ["serde"] }
dirs = "4.0.0"
void = "1.0.2"
mime_guess = "2.0.4"
mediatype = { version = "0.19.13", features = ["serde"] }
rand = "0.8.5"
uuid = { version = "1.2.2", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
